grafana-stack/tempo/tempo-query-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-query
spec:
  tls:
  - hosts:
      - tempo-query.lab.home
    secretName: tempo-query-tls
  rules:
  - host: tempo-query.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo
            port:
              number: 16686
